--- a/SpringBootRestfulWebService/pom.xml
+++ b/SpringBootRestfulWebService/pom.xml
@@ -13,4 +13,6 @@
         <maven.compiler.target>16</maven.compiler.target>
     </properties>
 
+    <name>Springboot Web Service</name>
+
 </project>
