--- a/SpringBootRestfulWebService/Service/pom.xml
+++ b/SpringBootRestfulWebService/Service/pom.xml
@@ -2,15 +2,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <artifactId>SpringBootRestfulWebService</artifactId>
+        <groupId>org.example</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
-    <artifactId>SpringBootRestfulWebService</artifactId>
-    <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
-    <modules>
-        <module>Service</module>
-    </modules>
+    <groupId>edu.neumont.ccolby</groupId>
+    <artifactId>Service</artifactId>
 
     <properties>
         <maven.compiler.source>16</maven.compiler.source>
