--- a/SpringBootRestfulWebService/Controller/pom.xml
+++ b/SpringBootRestfulWebService/Controller/pom.xml
@@ -32,6 +32,12 @@
             <groupId>edu.neumont.ccolby</groupId>
             <artifactId>Service</artifactId>
         </dependency>
+        <dependency>
+            <groupId>edu.neumont.ccolby</groupId>
+            <artifactId>Service</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
