--- a/SpringBootRestfulWebService/Service/pom.xml
+++ b/SpringBootRestfulWebService/Service/pom.xml
@@ -11,6 +11,20 @@
 
     <groupId>edu.neumont.ccolby</groupId>
     <artifactId>Service</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-core</artifactId>
+            <version>9.0.54</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>5.3.12</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
     <properties>
         <maven.compiler.source>16</maven.compiler.source>
