--- a/ValidatePhoneNumber/pom.xml
+++ b/ValidatePhoneNumber/pom.xml
@@ -5,13 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>SpringBootRestfulWebService</artifactId>
-    <packaging>pom</packaging>
+    <artifactId>ValidatePhoneNumber</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <modules>
-        <module>Service</module>
-        <module>Controller</module>
-    </modules>
 
     <properties>
         <maven.compiler.source>16</maven.compiler.source>
