--- a/ValidatePhoneNumber/pom.xml
+++ b/ValidatePhoneNumber/pom.xml
@@ -7,6 +7,13 @@
     <groupId>edu.neumont.ccolby</groupId>
     <artifactId>ValidatePhoneNumber</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.8.2</version>
+        </dependency>
+    </dependencies>
 
     <properties>
         <maven.compiler.source>16</maven.compiler.source>
